--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -162,7 +162,8 @@
             //let myText = document.querySelector("#textContent")
 
             let element = document.getElementById("textBox")
-            let myText = document.getElementById("textContent")
+            //let myText = document.getElementById("textContent")
+            let myText = document.querySelector("#textContent")
             
             const btn = document.createElement("span")
             const info = document.createElement("i")
