--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -100,7 +100,7 @@
 
 <body>
     <div class="w3-container w3-indigo w3-center w3-large" style="opacity:0.8;" id="textBox">
-        <p id="textContent">Please scan a marker</p>
+        <div><p id="textContent">Please scan a marker</p></div>
     </div>
     
     <!-- The Modal -->
