--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -161,8 +161,9 @@
             //const element = document.querySelector('.info-text')
             //let myText = document.querySelector("#textContent")
 
-            let element = document.getElementById("textBox")
+            //let element = document.getElementById("textBox")
             //let myText = document.getElementById("textContent")
+            let element = document.querySelector("#textBox")
             let myText = document.querySelector("#textContent")
             
             const btn = document.createElement("span")
