--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -163,8 +163,8 @@
 
             //let element = document.getElementById("textBox")
             //let myText = document.getElementById("textContent")
-            var element = document.querySelector("#textBox")
-            var myText = document.querySelector("#textContent")
+            const element = document.querySelector("#textBox")
+            const myText = document.querySelector("#textContent")
             
             const btn = document.createElement("span")
             const info = document.createElement("i")
