--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -164,7 +164,7 @@
             //let element = document.getElementById("textBox")
             //let myText = document.getElementById("textContent")
             const element = document.querySelector("#textBox")
-            const myText = document.querySelector("#textContent")
+            let myText = document.querySelector("#textContent")
             
             const btn = document.createElement("span")
             const info = document.createElement("i")
