--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -99,7 +99,9 @@
 -->
 
 <body>
-    <div class="w3-container w3-indigo w3-center w3-large" style="opacity:0.8;" id="textBox">
+    <!--<div class="w3-container w3-indigo w3-center w3-large" style="opacity:0.8;" id="textBox">-->
+
+    <div class="info-text" id="textBox">
         <div><p id="textContent">Please scan a marker</p></div>
     </div>
     
