--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -16,12 +16,11 @@
     .info-text {
         height: 15%;
         width: 100%;
-        position: bottom;
-        bottom: 0;
+        top: 0;
         left: 0;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 9999;
-        display: flex;
+        display: absolute;
         justify-content: center;
         align-items: center;
     }
