--- a/01-ar/index.html
+++ b/01-ar/index.html
@@ -15,12 +15,10 @@
 <style>
     .info-text {
         height: 15%;
-        width: 100%;
-        top: 0;
-        left: 0;
+        margin: 0;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 9999;
-        display: absolute;
+        overflow: hidden;
         justify-content: center;
         align-items: center;
     }
