--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -14,7 +14,8 @@
 
 <style>
     .info-text {
-        height: 15%;
+        height: 10vh;
+        width: 100vw;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 999;
         display: fixed;
