--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -15,7 +15,7 @@
 <style>
     .info-text {
         height: 10vh;
-        width: 100vw;
+        max-width: 100%;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 999;
         overflow: hidden;
