--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -14,8 +14,7 @@
 
 <style>
     .info-text {
-        height: 10vh;
-        max-width: 100%;
+        height: 15%;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 999;
         overflow: hidden;
@@ -250,7 +249,7 @@
 </script>
 
 
-<body style='margin : 0px;'>
+<body style='margin:0px; max-width:100%;'>
     <div class="info-text" id="textBox">
         <div><p id="textContent">Please scan a marker</p></div>
     </div>
