--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>AR for Candra Kirana Scene 2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
@@ -249,7 +249,7 @@
 </script>
 
 
-<body style='margin:0px; height:100vh; max-width:100vw;'>
+<body style='margin:0px; max-width:100%;'>
     <div class="info-text" id="textBox">
         <div><p id="textContent">Please scan a marker</p></div>
     </div>
