--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -249,7 +249,7 @@
 </script>
 
 
-<body style='margin:0px; max-width:100%;'>
+<body style='margin:0px;'>
     <div class="info-text" id="textBox">
         <div><p id="textContent">Please scan a marker</p></div>
     </div>
