--- a/02-ar/index.html
+++ b/02-ar/index.html
@@ -15,6 +15,7 @@
 <style>
     .info-text {
         height: 15%;
+        width: 100%;
         background-color: rgba(15, 61, 185, 0.8);
         z-index: 999;
         overflow: hidden;
